--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,18 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.96",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
+    "jwks-rsa": "^3.1.0",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.9.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^22.10.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
