--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.96",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lru-cache": "^11.0.2",
     "mongoose": "^8.9.5",
     "zod": "^3.24.1"
   },
