--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/mongoose": "^5.11.96",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lru-cache": "^11.0.2",
     "mongoose": "^8.9.5",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/mongoose": "^5.11.96",
+    "@types/swagger-ui-express": "^4.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
