--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.96",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -18,6 +19,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^22.10.7",
