--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.3.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "lru-cache": "^11.0.2",
@@ -16,8 +17,8 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.7",
     "@types/mongoose": "^5.11.96",
+    "@types/node": "^22.10.7",
     "@types/swagger-ui-express": "^4.1.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
